@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,8 +25,7 @@
  * @test
  * @modules java.base/jdk.internal.foreign
  * @run testng TestLinker
- * @run testng/othervm/policy=security.policy
- *          -Djava.security.manager=default TestLinker
+ * @run testng/othervm TestLinker
  */
 
 import jdk.internal.foreign.CABI;
